--- a/Project-2/MovieApp/app.json
+++ b/Project-2/MovieApp/app.json
@@ -1,11 +1,14 @@
 {
   "expo": {
-    "name": "project2",
-    "description": "This project is really great.",
-    "slug": "project2",
+    "name": "MovieSearch",
+    "slug": "Movie",
     "privacy": "public",
-    "sdkVersion": "25.0.0",
-    "platforms": ["ios", "android"],
+    "sdkVersion": "33.0.0",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -14,6 +17,12 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     }
